chore: added swagger documentation support
